--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
