--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@google-cloud/text-to-speech": "^5.0.1",
     "@mui/material": "^5.14.18",
     "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.16",
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "howler": "^2.2.4",
     "mysql2": "^3.6.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
