--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-functions": "^4.5.0",
     "howler": "^2.2.4",
     "mysql2": "^3.6.2",
     "postcss": "^8.4.31",
