--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/forms": "^0.5.6",
+    "@vercel/analytics": "^1.2.2",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
